@@ -1,5 +1,7 @@
 === SVN
 
+* Keep DRY by re-using Model#[]= from method_missing.
+
 * Added Model.fetch alias for DB.fetch.set_model(Model)
 
 === 0.4.2 (2007-12-07)
